# GatingWCA

./: .gitignore  README.md  burger.pbfsm  pyproject.toml  toyplane-glass-thumbsup.pbfsm
android-client/: .gitignore  build.gradle  settings.gradle
android-client/app/: build.gradle
android-client/app/src/main/: AndroidManifest.xml
android-client/app/src/main/java/edu/cmu/cs/wca/: MainActivity.java  SimpleInMeetingListener.java  ThumbsUpDetection.java  ZoomActivity.java
android-client/app/src/main/proto/: wca.proto
android-client/app/src/main/res/layout/: activity_main.xml  activity_zoom.xml  meeting_video.xml
android-client/app/src/main/res/layout-land/: activity_zoom.xml
android-client/app/src/main/res/values/: strings.xml  themes.xml
android-client/app/src/main/res/values-night/: themes.xml
android-client/app/src/main/res/xml/: network_security_config.xml
android-client/mobilertc/: build.gradle
server/: .gitignore  get_zoom_recordings.py  hand_gestures.py  http_server.py  measure_object_size.py  mpncov.py  sandwich.pbfsm  server.py  wca_pb2.py
server/static/: index.js  style.css  zoom.js
server/templates/: index.html  zoom.html
training/: .gitignore  Dockerfile  README.md  crop_videos_from_detector.py  crop_videos_from_labels.py  gen_data_od.py  remove_dup.py  requirements.txt  resize_cropped_images.py  split_dataset.py  test_model.py  verify_tfrecord.py
