[tool.poetry]
name = "gatingwca"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
graphviz = "^0.20.3"
gabriel-server = "^2.1.1"
torchvision = "^0.18.0"
pyjwt = "^2.8.0"
aiohttp-jinja2 = "^1.6"
protobuf = "~3.19"
ultralytics = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
