[tool.poetry]
name = "gatingwca"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
graphviz = "^0.20.3"
gabriel-server = "^2.1.1"
pyjwt = "^2.8.0"
aiohttp-jinja2 = "^1.6"
protobuf = "~3.20"
ultralytics = "^8.0.0"
requests = "^2.24.0"
cuda-python = { version = "<12.4.0", python = "<3.9" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
